@@ -35,6 +35,7 @@
     * a new pictogram has been added.
     * new icons for battery and signal have been added.
     * a new thread to handle Zigbee2Mqtt and Aqara sensors has been added.
+    * battery and signal handling has been added to out data display.
 
 
 ### November 6 2021, Release version 0.7.6 ###
